[gd_scene load_steps=5 format=3 uid="uid://wxbi6kpsvc11"]

[ext_resource type="Script" path="res://results.gd" id="1_jh808"]
[ext_resource type="PackedScene" uid="uid://3h5rw57tt6jp" path="res://table.tscn" id="2_it1xd"]
[ext_resource type="Texture2D" uid="uid://d2ppgspwkh273" path="res://Art/Home.png" id="3_6oy85"]
[ext_resource type="Texture2D" uid="uid://b76y4ky8ns217" path="res://Art/Restart.png" id="5_rraod"]

[node name="results" type="Node2D"]
script = ExtResource("1_jh808")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Tables" type="Area2D" parent="."]
position = Vector2(0, 900)

[node name="ColorRect" type="ColorRect" parent="Tables"]
z_index = 1
offset_right = 480.0
offset_bottom = 720.0
mouse_filter = 2
color = Color(0.215686, 0.180392, 0.219608, 1)

[node name="TotalTable" parent="Tables" instance=ExtResource("2_it1xd")]
z_index = 1

[node name="MidRect2" type="ColorRect" parent="Tables"]
z_index = 1
offset_right = 480.0
offset_bottom = 25.0
mouse_filter = 2
color = Color(0.215686, 0.180392, 0.219608, 1)

[node name="CardsTable" parent="Tables" instance=ExtResource("2_it1xd")]
z_index = 1

[node name="MidRect" type="ColorRect" parent="Tables"]
z_index = 1
offset_top = 1.0
offset_right = 480.0
offset_bottom = 26.0
mouse_filter = 2
color = Color(0.215686, 0.180392, 0.219608, 1)

[node name="RoundTable" parent="Tables" instance=ExtResource("2_it1xd")]
z_index = 1
position = Vector2(0, 1)

[node name="Border" type="ColorRect" parent="Tables"]
z_index = 1
offset_right = 480.0
offset_bottom = 2.0

[node name="Home" type="TextureButton" parent="."]
offset_left = -3.05176e-05
offset_right = 370.0
offset_bottom = 371.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("3_6oy85")
metadata/_edit_use_anchors_ = true

[node name="Restart" type="TextureButton" parent="."]
offset_left = 424.0
offset_right = 794.0
offset_bottom = 371.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("5_rraod")
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="StartTimer" to="." method="_on_timer_timeout"]
